--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="header container">
         <div class="overlay"></div>
         <nav class="container--px flex flex-jc-sb flex-ai-c">
-            <a href="/" class="flex header__logo">
+            <a href="https://github.com/OverFkill/" class="flex header__logo">
                 <img src="images/logo.svg" alt="easybank" />
             </a>
 
