--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="header__links hide-for-mobile">
                 <a href="#">Home</a>
                 <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="https://github.com/OverFkill">Contact</a>
                 <a href="#">Blog</a>
                 <a href="#">Careers</a>
             </div>
